Archive previous files into Module-1-Docker-Terraform and initialize Module-2-Kestra

--- a/Module-1-Docker-Terraform/pipeline/notebook.ipynb
+++ b/Module-1-Docker-Terraform/pipeline/notebook.ipynb
@@ -1203,7 +1203,30 @@
    "id": "4cadaa03-ecc7-4ad6-832b-c0440d90d764",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first = True\n",
+    "\n",
+    "for df_chunk in df_iter:\n",
+    "\n",
+    "    if first:\n",
+    "        # Create table schema (no data)\n",
+    "        df_chunk.head(0).to_sql(\n",
+    "            name=\"yellow_taxi_data\",\n",
+    "            con=engine,\n",
+    "            if_exists=\"replace\"\n",
+    "        )\n",
+    "        first = False\n",
+    "        print(\"Table created\")\n",
+    "\n",
+    "    # Insert chunk\n",
+    "    df_chunk.to_sql(\n",
+    "        name=\"yellow_taxi_data\",\n",
+    "        con=engine,\n",
+    "        if_exists=\"append\"\n",
+    "    )\n",
+    "\n",
+    "    print(\"Inserted:\", len(df_chunk))"
+   ]
   }
  ],
  "metadata": {
