Add initial setup for Module 4: Analytics Engineering with dbt
- Create .gitignore files to exclude data and build artifacts
- Add README.md with module overview, setup instructions, and homework solutions
- Implement main.py for module entry point
- Set up pyproject.toml for project dependencies
- Create dbt project structure with models, analyses, and macros
- Implement data ingestion script to download and convert NYC taxi data
- Add staging models for green and yellow taxi trip data
- Create intermediate model to union trip data
- Define sources and schema for dbt models
- Add example dbt models and tests for demonstration

--- a/Module-3-data-warehouse/DLT_upload_to_GCP.ipynb
+++ b/Module-3-data-warehouse/DLT_upload_to_GCP.ipynb
@@ -11,48 +11,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "UsUZobVduL7l"
       },
       "outputs": [],
       "source": [
         "import os\n",
-        "from google.colab import userdata\n",
+        "import json\n",
         "\n",
-        "os.environ[\"DESTINATION__CREDENTIALS\"] = userdata.get(\"GCP_CREDENTIALS\")\n",
-        "os.environ[\"BUCKET_URL\"] = \"gs://your_bucket_url\""
+        "with open(\"gcs.json\", \"r\") as f:\n",
+        "    credentials = json.load(f)\n",
+        "\n",
+        "os.environ[\"DESTINATION__CREDENTIALS\"] = json.dumps(credentials)\n",
+        "os.environ[\"BUCKET_URL\"] = \"gs://dezoomcamp_module4_2026\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "mPBzsEgyjsBo"
-      },
-      "outputs": [],
-      "source": [
-        "# Install for production\n",
-        "%%capture\n",
-        "!pip install dlt[bigquery, gs]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "evdUsDNbkCTk"
-      },
-      "outputs": [],
-      "source": [
-        "# Install for testing\n",
-        "%%capture\n",
-        "!pip install dlt[duckdb]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "lYh7r1mTf4uo"
       },
@@ -76,19 +53,101 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "xya0215jsnsb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2026-02-09 09:54:49,516|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_05_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n",
+            "2026-02-09 09:54:49,517|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_04_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n",
+            "2026-02-09 09:54:49,517|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_07_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n",
+            "2026-02-09 09:54:49,517|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_01_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n",
+            "2026-02-09 09:54:49,518|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_02_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n",
+            "2026-02-09 09:54:49,518|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_06_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n",
+            "2026-02-09 09:54:49,518|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_10_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n",
+            "2026-02-09 09:54:49,518|[WARNING]|61267|8600576192|dlt|validate.py|verify_normalized_table:91|In schema `rides`: The following columns in table 'yellow_tripdata_2020_03_parquet' did not receive any data during this load and therefore could not have their types inferred:\n",
+            "  - airport_fee\n",
+            "\n",
+            "Unless type hints are provided, these columns will not be materialized in the destination.\n",
+            "One way to provide type hints is to use the 'columns' argument in the '@dlt.resource' decorator.  For example:\n",
+            "\n",
+            "@dlt.resource(columns={'airport_fee': {'data_type': 'text'}})\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pipeline rides_pipeline load step completed in 2 minutes and 32.44 seconds\n",
+            "1 load package(s) were loaded to destination filesystem and into dataset rides_dataset\n",
+            "The filesystem destination used gs://dezoomcamp_module4_2026 location to store data\n",
+            "Load package 1770584083.236244 is LOADED and contains no failed jobs\n"
+          ]
+        }
+      ],
       "source": [
         "# Define a dlt source to download and process Parquet files as resources\n",
         "@dlt.source(name=\"rides\")\n",
         "def download_parquet():\n",
         "    prefix = \"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata\"\n",
-        "    for month in range(1, 7):\n",
-        "        file_name = f\"yellow_tripdata_2024-0{month}.parquet\"\n",
-        "        url = f\"{prefix}_2024-0{month}.parquet\"\n",
+        "    for month in range(1, 13):\n",
+        "        month_str = f\"{month:02d}\"\n",
+        "        file_name = f\"yellow_tripdata_2020-{month_str}.parquet\"\n",
+        "        url = f\"{prefix}_2020-{month_str}.parquet\"\n",
         "        response = requests.get(url)\n",
         "\n",
         "        df = pd.read_parquet(BytesIO(response.content))\n",
@@ -104,7 +163,6 @@
         "    dataset_name=\"rides_dataset\",\n",
         ")\n",
         "\n",
-        "# Run the pipeline to load Parquet data into DuckDB\n",
         "load_info = pipeline.run(download_parquet(), loader_file_format=\"parquet\")\n",
         "\n",
         "# Print the results\n",
@@ -137,8 +195,9 @@
         "def download_parquet():\n",
         "    prefix = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata'\n",
         "\n",
-        "    for month in range(1, 7):\n",
-        "        url = f\"{prefix}_2024-0{month}.parquet\"\n",
+        "    for month in range(1, 13):\n",
+        "        month_str = f\"{month:02d}\"\n",
+        "        url = f\"{prefix}_2019-{month_str}.parquet\"\n",
         "        response = requests.get(url)\n",
         "\n",
         "        df = pd.read_parquet(BytesIO(response.content))\n",
@@ -214,7 +273,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.8"
     }
   },
   "nbformat": 4,
