--- a/Module-6-batch/code/03_test.ipynb
+++ b/Module-6-batch/code/03_test.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bd55afbe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/xinglingao/workshop/DE-ZoomCamp/.venv/lib/python3.12/site-packages/pyspark/__init__.py'"
+       "'/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/python/pyspark/__init__.py'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,23 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "29f1cf4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b4626608",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"JAVA_HOME\"] = \"/opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home\""
    ]
   },
   {
@@ -62,11 +51,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Using incubator modules: jdk.incubator.vector\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/alexey/spark/spark-3.0.3-bin-hadoop3.2/jars/spark-unsafe_2.12-3.0.3.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "22/02/15 22:22:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "26/02/26 12:13:20 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     }
    ],
@@ -80,22 +73,29 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "feea3bb1",
+   "id": "3f604529",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100  123M  100  123M    0     0  7167k      0  0:00:17  0:00:17 --:--:-- 6891k\n"
+      "--2022-02-15 22:23:22--  https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv\n",
+      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 54.231.196.8\n",
+      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|54.231.196.8|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 12322 (12K) [application/octet-stream]\n",
+      "Saving to: ‘taxi+_zone_lookup.csv’\n",
+      "\n",
+      "taxi+_zone_lookup.c 100%[===================>]  12.03K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2022-02-15 22:23:23 (114 MB/s) - ‘taxi+_zone_lookup.csv’ saved [12322/12322]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "!curl -L \"https://github.com/DataTalksClub/nyc-tlc-data/releases/download/fhvhv/fhvhv_tripdata_2021-01.csv.gz\" | gunzip > fhvhv_tripdata_2021-01.csv"
+    "!wget https://s3.amazonaws.com/nyc-tlc/misc/taxi+_zone_lookup.csv"
    ]
   },
   {
@@ -108,38 +108,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hvfhs_license_num,dispatching_base_num,pickup_datetime,dropoff_datetime,PULocationID,DOLocationID,SR_Flag\n",
-      "HV0003,B02682,2021-01-01 00:33:44,2021-01-01 00:49:07,230,166,\n",
-      "HV0003,B02682,2021-01-01 00:55:19,2021-01-01 01:18:21,152,167,\n",
-      "HV0003,B02764,2021-01-01 00:23:56,2021-01-01 00:38:05,233,142,\n",
-      "HV0003,B02764,2021-01-01 00:42:51,2021-01-01 00:45:50,142,143,\n",
-      "HV0003,B02764,2021-01-01 00:48:14,2021-01-01 01:08:42,143,78,\n",
-      "HV0005,B02510,2021-01-01 00:06:59,2021-01-01 00:43:01,88,42,\n",
-      "HV0005,B02510,2021-01-01 00:50:00,2021-01-01 01:04:57,42,151,\n",
-      "HV0003,B02764,2021-01-01 00:14:30,2021-01-01 00:50:27,71,226,\n",
-      "HV0003,B02875,2021-01-01 00:22:54,2021-01-01 00:30:20,112,255,\n"
+      "\"LocationID\",\"Borough\",\"Zone\",\"service_zone\"\r\n",
+      "\r\n",
+      "1,\"EWR\",\"Newark Airport\",\"EWR\"\r\n",
+      "\r\n",
+      "2,\"Queens\",\"Jamaica Bay\",\"Boro Zone\"\r\n",
+      "\r\n",
+      "3,\"Bronx\",\"Allerton/Pelham Gardens\",\"Boro Zone\"\r\n",
+      "\r\n",
+      "4,\"Manhattan\",\"Alphabet City\",\"Yellow Zone\"\r\n",
+      "\r\n",
+      "5,\"Staten Island\",\"Arden Heights\",\"Boro Zone\"\r\n",
+      "\r\n",
+      "6,\"Staten Island\",\"Arrochar/Fort Wadsworth\",\"Boro Zone\"\r\n",
+      "\r\n",
+      "7,\"Queens\",\"Astoria\",\"Boro Zone\"\r\n",
+      "\r\n",
+      "8,\"Queens\",\"Astoria Park\",\"Boro Zone\"\r\n",
+      "\r\n",
+      "9,\"Queens\",\"Auburndale\",\"Boro Zone\"\r\n",
+      "\r\n"
      ]
     }
    ],
    "source": [
-    "!head fhvhv_tripdata_2021-01.csv"
+    "!head taxi+_zone_lookup.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "809464d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = spark.read \\\n",
     "    .option(\"header\", \"true\") \\\n",
-    "    .csv('fhvhv_tripdata_2021-01.csv')"
+    "    .csv('taxi+_zone_lookup.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e36dd996",
    "metadata": {},
    "outputs": [
@@ -147,31 +157,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------------+--------------------+-------------------+-------------------+------------+------------+-------+\n",
-      "|hvfhs_license_num|dispatching_base_num|    pickup_datetime|   dropoff_datetime|PULocationID|DOLocationID|SR_Flag|\n",
-      "+-----------------+--------------------+-------------------+-------------------+------------+------------+-------+\n",
-      "|           HV0003|              B02682|2021-01-01 00:33:44|2021-01-01 00:49:07|         230|         166|   NULL|\n",
-      "|           HV0003|              B02682|2021-01-01 00:55:19|2021-01-01 01:18:21|         152|         167|   NULL|\n",
-      "|           HV0003|              B02764|2021-01-01 00:23:56|2021-01-01 00:38:05|         233|         142|   NULL|\n",
-      "|           HV0003|              B02764|2021-01-01 00:42:51|2021-01-01 00:45:50|         142|         143|   NULL|\n",
-      "|           HV0003|              B02764|2021-01-01 00:48:14|2021-01-01 01:08:42|         143|          78|   NULL|\n",
-      "|           HV0005|              B02510|2021-01-01 00:06:59|2021-01-01 00:43:01|          88|          42|   NULL|\n",
-      "|           HV0005|              B02510|2021-01-01 00:50:00|2021-01-01 01:04:57|          42|         151|   NULL|\n",
-      "|           HV0003|              B02764|2021-01-01 00:14:30|2021-01-01 00:50:27|          71|         226|   NULL|\n",
-      "|           HV0003|              B02875|2021-01-01 00:22:54|2021-01-01 00:30:20|         112|         255|   NULL|\n",
-      "|           HV0003|              B02875|2021-01-01 00:40:12|2021-01-01 00:53:31|         255|         232|   NULL|\n",
-      "|           HV0003|              B02875|2021-01-01 00:56:45|2021-01-01 01:17:42|         232|         198|   NULL|\n",
-      "|           HV0003|              B02835|2021-01-01 00:29:04|2021-01-01 00:36:27|         113|          48|   NULL|\n",
-      "|           HV0003|              B02835|2021-01-01 00:48:56|2021-01-01 00:59:12|         239|          75|   NULL|\n",
-      "|           HV0004|              B02800|2021-01-01 00:15:24|2021-01-01 00:38:31|         181|         237|   NULL|\n",
-      "|           HV0004|              B02800|2021-01-01 00:45:00|2021-01-01 01:06:45|         236|          68|   NULL|\n",
-      "|           HV0003|              B02682|2021-01-01 00:11:53|2021-01-01 00:18:06|         256|         148|   NULL|\n",
-      "|           HV0003|              B02682|2021-01-01 00:28:31|2021-01-01 00:41:40|          79|          80|   NULL|\n",
-      "|           HV0003|              B02682|2021-01-01 00:50:49|2021-01-01 00:55:59|          17|         217|   NULL|\n",
-      "|           HV0005|              B02510|2021-01-01 00:08:40|2021-01-01 00:39:39|          62|          29|   NULL|\n",
-      "|           HV0003|              B02836|2021-01-01 00:53:48|2021-01-01 01:11:40|          22|          22|   NULL|\n",
-      "+-----------------+--------------------+-------------------+-------------------+------------+------------+-------+\n",
-      "only showing top 20 rows\n"
+      "+----------+-------------+--------------------+------------+\n",
+      "|LocationID|      Borough|                Zone|service_zone|\n",
+      "+----------+-------------+--------------------+------------+\n",
+      "|         1|          EWR|      Newark Airport|         EWR|\n",
+      "|         2|       Queens|         Jamaica Bay|   Boro Zone|\n",
+      "|         3|        Bronx|Allerton/Pelham G...|   Boro Zone|\n",
+      "|         4|    Manhattan|       Alphabet City| Yellow Zone|\n",
+      "|         5|Staten Island|       Arden Heights|   Boro Zone|\n",
+      "|         6|Staten Island|Arrochar/Fort Wad...|   Boro Zone|\n",
+      "|         7|       Queens|             Astoria|   Boro Zone|\n",
+      "|         8|       Queens|        Astoria Park|   Boro Zone|\n",
+      "|         9|       Queens|          Auburndale|   Boro Zone|\n",
+      "|        10|       Queens|        Baisley Park|   Boro Zone|\n",
+      "|        11|     Brooklyn|          Bath Beach|   Boro Zone|\n",
+      "|        12|    Manhattan|        Battery Park| Yellow Zone|\n",
+      "|        13|    Manhattan|   Battery Park City| Yellow Zone|\n",
+      "|        14|     Brooklyn|           Bay Ridge|   Boro Zone|\n",
+      "|        15|       Queens|Bay Terrace/Fort ...|   Boro Zone|\n",
+      "|        16|       Queens|             Bayside|   Boro Zone|\n",
+      "|        17|     Brooklyn|             Bedford|   Boro Zone|\n",
+      "|        18|        Bronx|        Bedford Park|   Boro Zone|\n",
+      "|        19|       Queens|           Bellerose|   Boro Zone|\n",
+      "|        20|        Bronx|             Belmont|   Boro Zone|\n",
+      "+----------+-------------+--------------------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
      ]
     }
    ],
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cb547351",
    "metadata": {
     "scrolled": true
@@ -191,8 +202,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "26/02/27 10:19:20 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
-      "Scaling row group sizes to 95.00% for 8 writers\n",
+      "\r\n",
+      "[Stage 4:>                                                          (0 + 1) / 1]\r\n",
+      "\r\n",
       "                                                                                \r"
      ]
     }
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "02fe2bdb",
    "metadata": {},
    "outputs": [
@@ -211,22 +223,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 1723544\n",
-      "-rw-r--r--@  1 xinglingao  staff   8.3K Feb 27 10:19 03_test.ipynb\n",
-      "-rw-r--r--   1 xinglingao  staff    18K Feb 13 09:31 04_pyspark.ipynb\n",
-      "-rw-r--r--   1 xinglingao  staff    32K Feb 13 09:31 05_taxi_schema.ipynb\n",
-      "-rw-r--r--   1 xinglingao  staff   8.6K Feb 13 09:31 06_spark_sql.ipynb\n",
-      "-rw-r--r--   1 xinglingao  staff   2.5K Feb 13 09:31 06_spark_sql.py\n",
-      "-rw-r--r--   1 xinglingao  staff   2.6K Feb 13 09:31 06_spark_sql_big_query.py\n",
-      "-rw-r--r--   1 xinglingao  staff   7.5K Feb 13 09:31 07_groupby_join.ipynb\n",
-      "-rw-r--r--   1 xinglingao  staff    11K Feb 13 09:31 08_rdds.ipynb\n",
-      "-rw-r--r--   1 xinglingao  staff   4.3K Feb 13 09:31 09_spark_gcs.ipynb\n",
-      "-rw-r--r--   1 xinglingao  staff   3.8K Feb 13 09:31 cloud.md\n",
-      "-rwxr-xr-x   1 xinglingao  staff   544B Feb 13 09:31 \u001b[31mdownload_data.sh\u001b[m\u001b[m\n",
-      "-rw-r--r--@  1 xinglingao  staff   717M Feb 26 12:13 fhvhv_tripdata_2021-01.csv\n",
-      "-rw-r--r--@  1 xinglingao  staff   124M Feb 26 12:10 fhvhv_tripdata_2021-01.csv.gz\n",
-      "-rw-r--r--   1 xinglingao  staff    16K Feb 13 09:31 homework.ipynb\n",
-      "drwxr-xr-x@ 20 xinglingao  staff   640B Feb 27 10:19 \u001b[34mzones\u001b[m\u001b[m\n"
+      "total 28K\r\n",
+      "-rw-rw-r-- 1 alexey alexey 6.8K Feb 15 22:25 Untitled.ipynb\r\n",
+      "-rw-rw-r-- 1 alexey alexey  13K Aug 17  2016 taxi+_zone_lookup.csv\r\n",
+      "drwxr-xr-x 2 alexey alexey 4.0K Feb 15 22:25 zones\r\n"
      ]
     }
    ],
